Users alignment fixed

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -728,9 +728,12 @@ label {
 }
 /* card users */
 .carduser {
+  margin-left: 50px;
+  margin-right: 50px;
+  float: left;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 30%;
+  width: 100%;
   background-color: white;
 }
 
@@ -739,6 +742,7 @@ label {
 }
 
 .containercard {
+  width: inherit;
   padding: 2px 16px;
 }
 
@@ -781,4 +785,7 @@ button.dislike{
   border-color: rgba(255,82,82 ,1);
   border-width: 1px;
   font-size: 15px;
+}
+.halign{
+display: inline-block;
 }
